crates/evm/src/snapshots/tempo_evm__evm__tests__tip20_full_evm_storage_actions_T5.snap
---
source: crates/evm/src/evm.rs
assertion_line: 1722
expression: snapshot
---
direct_first_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 1000000, 1000)"
  - "Sload(FEE_TOKEN, balances[FeeManager], 0)"
  - "Sstore(FEE_TOKEN, balances[FeeManager], 0, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170141183460469231731687303715884105728000000, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(PATH_USD, balances[sender], 500000)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 500000, 499900)"
  - "Sload(PATH_USD, balances[recipient], 0)"
  - "Sstore(PATH_USD, balances[recipient], 0, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1000, 450)"
  - "Sinc(FEE_TOKEN, balances[sender], 999000, 450)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170141183460469231731687303715884105728000000, 550)"
  - "Sload(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 0)"
  - "Sstore(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 0, 548)"
direct_second_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999450, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 550, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169954708723396557453709374431011496748122662, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(PATH_USD, balances[sender], 499900)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499900, 499800)"
  - "Sinc(PATH_USD, balances[recipient], 100, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1550, 947)"
  - "Sinc(FEE_TOKEN, balances[sender], 998450, 947)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169954708723396557453709374431011496748122662, 53)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 548, 52)"
twohop_first_transfer:
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, transferPolicyId, 1648471085075383662622320294731871830915724609321)"
  - "Sload(TWO_HOP_FEE_TOKEN, paused, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[sender], 1000000, 1000)"
  - "Sload(TWO_HOP_FEE_TOKEN, balances[FeeManager], 0)"
  - "Sstore(TWO_HOP_FEE_TOKEN, balances[FeeManager], 0, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][PATH_USD], 0, 997, false)"
  - "Sload(TWO_HOP_FEE_TOKEN, quoteToken, 186969447744480744418635462015588811259792066345)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170141183460469231731687303715884105728000000, 997, true)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169937014040316668653609278951425044801127003, 994, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(PATH_USD, balances[sender], 499800)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499800, 499700)"
  - "Sinc(PATH_USD, balances[recipient], 200, 100)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[FeeManager], 1000, 947)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[sender], 999000, 947)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170141183460469231731687303715884105728000000, 53)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169937014040316668653609278951425044801127003, 52)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 600, 51)"
twohop_second_transfer:
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, transferPolicyId, 1648471085075383662622320294731871830915724609321)"
  - "Sload(TWO_HOP_FEE_TOKEN, paused, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[sender], 999947, 1000)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[FeeManager], 53, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][PATH_USD], 0, 997, false)"
  - "Sload(TWO_HOP_FEE_TOKEN, quoteToken, 186969447744480744418635462015588811259792066345)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170123488777389342931587208236297653781004341, 997, true)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169919659639603700791972646846446024622342799, 994, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(PATH_USD, balances[sender], 499700)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499700, 499600)"
  - "Sinc(PATH_USD, balances[recipient], 300, 100)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[FeeManager], 1053, 947)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[sender], 998947, 947)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170123488777389342931587208236297653781004341, 53)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169919659639603700791972646846446024622342799, 52)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 651, 51)"
2d_nonce_first_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 0)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 0)"
  - "Sstore(NONCE_MANAGER, nonces[sender][42], 0, 1)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999397, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 603, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169902305238890732930336014741467004443558595, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(PATH_USD, balances[sender], 499600)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499600, 499500)"
  - "Sinc(PATH_USD, balances[recipient], 400, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1603, 697)"
  - "Sinc(FEE_TOKEN, balances[sender], 998397, 697)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169902305238890732930336014741467004443558595, 303)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 702, 302)"
2d_nonce_second_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 1)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 1)"
  - "Sstore(NONCE_MANAGER, nonces[sender][42], 1, 2)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999094, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 906, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169799539964080609514370075610022610443699186, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(PATH_USD, balances[sender], 499500)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499500, 499400)"
  - "Sinc(PATH_USD, balances[recipient], 500, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1906, 942)"
  - "Sinc(FEE_TOKEN, balances[sender], 998094, 942)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169799539964080609514370075610022610443699186, 58)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 1004, 57)"
clear_balance_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999036, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 964, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169780143869166116021952663257398999655646252, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(PATH_USD, balances[sender], 499400)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499400, 0)"
  - "Sinc(PATH_USD, balances[recipient], 600, 499400)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1964, 952)"
  - "Sinc(FEE_TOKEN, balances[sender], 998036, 952)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169780143869166116021952663257398999655646252, 48)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 1061, 47)"
recreate_balance_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[recipient], 1000000, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 1012, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169764150597920831914169884650849706549707868, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(PATH_USD, balances[recipient], 500000)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[recipient], 500000, 499900)"
  - "Sload(PATH_USD, balances[sender], 0)"
  - "Sstore(PATH_USD, balances[sender], 0, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 2012, 450)"
  - "Sinc(FEE_TOKEN, balances[recipient], 999000, 450)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169764150597920831914169884650849706549707868, 550)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 1108, 548)"
