crates/evm/src/snapshots/tempo_evm__evm__tests__tip20_full_evm_storage_actions_T6.snap
---
source: crates/evm/src/evm.rs
assertion_line: 1722
expression: snapshot
---
direct_first_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 1000000, 1000)"
  - "Sload(FEE_TOKEN, balances[FeeManager], 0)"
  - "Sstore(FEE_TOKEN, balances[FeeManager], 0, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170141183460469231731687303715884105728000000, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 500000)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 500000, 499900)"
  - "Sload(PATH_USD, balances[recipient], 0)"
  - "Sstore(PATH_USD, balances[recipient], 0, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1000, 448)"
  - "Sinc(FEE_TOKEN, balances[sender], 999000, 448)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170141183460469231731687303715884105728000000, 552)"
  - "Sload(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 0)"
  - "Sstore(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 0, 550)"
direct_second_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999448, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 552, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169954028158662715576782447681796633211699752, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 499900)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499900, 499800)"
  - "Sinc(PATH_USD, balances[recipient], 100, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1552, 945)"
  - "Sinc(FEE_TOKEN, balances[sender], 998448, 945)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169954028158662715576782447681796633211699752, 55)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 550, 54)"
twohop_first_transfer:
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, transferPolicyId, 1648471085075383662622320294731871830915724609321)"
  - "Sload(TWO_HOP_FEE_TOKEN, paused, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[sender], 1000000, 1000)"
  - "Sload(TWO_HOP_FEE_TOKEN, balances[FeeManager], 0)"
  - "Sstore(TWO_HOP_FEE_TOKEN, balances[FeeManager], 0, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][PATH_USD], 0, 997, false)"
  - "Sload(TWO_HOP_FEE_TOKEN, quoteToken, 186969447744480744418635462015588811259792066345)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170141183460469231731687303715884105728000000, 997, true)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169935652910848984899755425452995317728281183, 994, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 499800)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499800, 499700)"
  - "Sinc(PATH_USD, balances[recipient], 200, 100)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[FeeManager], 1000, 945)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[sender], 999000, 945)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170141183460469231731687303715884105728000000, 55)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169935652910848984899755425452995317728281183, 54)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 604, 53)"
twohop_second_transfer:
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, transferPolicyId, 1648471085075383662622320294731871830915724609321)"
  - "Sload(TWO_HOP_FEE_TOKEN, paused, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[sender], 999945, 1000)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[FeeManager], 55, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][PATH_USD], 0, 997, false)"
  - "Sload(TWO_HOP_FEE_TOKEN, quoteToken, 186969447744480744418635462015588811259792066345)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170122808212655501054660281487082790244581431, 997, true)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169917617945402175161191866598801434013074069, 994, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 499700)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499700, 499600)"
  - "Sinc(PATH_USD, balances[recipient], 300, 100)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(TWO_HOP_FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[FeeManager], 1055, 945)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[sender], 998945, 945)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170122808212655501054660281487082790244581431, 55)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169917617945402175161191866598801434013074069, 54)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 657, 53)"
2d_nonce_first_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 0)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 0)"
  - "Sstore(NONCE_MANAGER, nonces[sender][42], 0, 1)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999393, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 607, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169899582979955365422628307744607550297866955, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 499600)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499600, 499500)"
  - "Sinc(PATH_USD, balances[recipient], 400, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1607, 695)"
  - "Sinc(FEE_TOKEN, balances[sender], 998393, 695)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169899582979955365422628307744607550297866955, 305)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 710, 304)"
2d_nonce_second_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 1)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 1)"
  - "Sstore(NONCE_MANAGER, nonces[sender][42], 1, 2)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999088, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 912, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169796137140411400129735441863948292761584636, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 499500)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499500, 499400)"
  - "Sinc(PATH_USD, balances[recipient], 500, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1912, 940)"
  - "Sinc(FEE_TOKEN, balances[sender], 998088, 940)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169796137140411400129735441863948292761584636, 60)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 1014, 59)"
clear_balance_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999028, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 972, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169776060480763064760391102762109818437108792, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 499400)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[sender], 499400, 0)"
  - "Sinc(PATH_USD, balances[recipient], 600, 499400)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1972, 950)"
  - "Sinc(FEE_TOKEN, balances[sender], 998028, 950)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169776060480763064760391102762109818437108792, 50)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 1073, 49)"
recreate_balance_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(FEE_TOKEN, transferPolicyId, 1648471085075383662622320294714166882522072350720)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[recipient], 1000000, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 1022, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169759386644783938775681397406345661794747498, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(PATH_USD, transferPolicyId, 1461501637330902918203684832716283019655932542976)"
  - "Sload(TIP403_REGISTRY, 2870047017637108544950037820031935930543733549586861711754546765533666003180, 0)"
  - "Sload(PATH_USD, balances[recipient], 500000)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardRecipient, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardPerToken, 0)"
  - "Sload(PATH_USD, userRewardInfo[sender].rewardBalance, 0)"
  - "Sload(PATH_USD, globalRewardPerToken, 0)"
  - "Sstore(PATH_USD, balances[recipient], 500000, 499900)"
  - "Sload(PATH_USD, balances[sender], 0)"
  - "Sstore(PATH_USD, balances[sender], 0, 100)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardRecipient, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardPerToken, 0)"
  - "Sload(FEE_TOKEN, userRewardInfo[recipient].rewardBalance, 0)"
  - "Sload(FEE_TOKEN, globalRewardPerToken, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 2022, 448)"
  - "Sinc(FEE_TOKEN, balances[recipient], 999000, 448)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169759386644783938775681397406345661794747498, 552)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 1122, 550)"
